--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "react": "^16.6.0",
+    "react-dazzle": "^1.4.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
     "react-test-renderer": "^16.6.0"
